[package]
name = "half"
version = "1.2.0"
authors = ["Kathryn Long <squeeself@gmail.com>"]
description = "Half-precision floating point f16 type for Rust implementing the IEEE 754-2008 binary16 type."
repository = "https://github.com/starkat99/half-rs"
readme = "README.md"
keywords = ["f16", "no_std"]
license = "MIT/Apache-2.0"
categories = ["no-std", "data-structures", "encoding"]

[badges]
appveyor = { repository = "starkat99/half-rs" }
travis-ci = { repository = "starkat99/half-rs" }
maintenance = { status = "passively-maintained" }

[features]
std = []
use-intrinsics = []
serialize = ["serde"] # Deprecated. Use serde directly.
rustc-dep-of-std = ["core", "alloc", "compiler_builtins/rustc-dep-of-std"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1.0", optional = true }

[patch.crates-io]
libc = { git = "https://github.com/raoulstrackx/libc.git", branch = "raoul/fortanixvme_rebase_106" }
