[package]
name = "half"
# Remember to keep in sync with html_root_url crate attribute
version = "1.8.3"
authors = ["Kathryn Long <squeeself@gmail.com>"]
description = "Half-precision floating point f16 and bf16 types for Rust implementing the IEEE 754-2008 standard binary16 and bfloat16 types."
repository = "https://github.com/starkat99/half-rs"
readme = "README.md"
keywords = ["f16", "bfloat16", "no_std"]
license = "MIT OR Apache-2.0"
categories = ["no-std", "data-structures", "encoding"]
edition = "2018"
exclude = [".git*", ".editorconfig"]

[features]
std = ["alloc"]
use-intrinsics = []
serialize = ["serde"] # Deprecated. Use serde directly.
rustc-dep-of-std = ["core", "alloc", "compiler_builtins/rustc-dep-of-std"]

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1.0", optional = true }
bytemuck = { version = "1.4.1", default-features = false, features = [
    "derive",
], optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"], optional = true }
zerocopy = { version = "0.6.0", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8.4"

[[bench]]
name = "convert"
harness = false

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
features = ["std", "serde", "bytemuck", "num-traits", "zerocopy"]

[patch.crates-io]
libc = { git = "https://github.com/raoulstrackx/libc.git", branch = "raoul/fortanixvme_rebase_106" }
